SERVER-66334 Initialize NetworkCounter::_tfoKernelSetting